--- a/loteriaalex/app/assets/stylesheets/lotteries.scss
+++ b/loteriaalex/app/assets/stylesheets/lotteries.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the lotteries controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+html,body{
+	margin: 0px; 
+}
+table.layout{
+	width: 100%;
+	height: 100px;
+	border: 0px;
+	font-size: 200%;
+	padding: 0px 60px;
+}
+a,a.visited{
+	color: inherit;
+	text-decoration: none;
+}
+.be-purple{
+	background-color: #5747BF;
+}
+.white{
+	color: #E8EEFF;
+}
